# ompi

config/: ompi_check_libuch.m4  ompi_check_ucc.m4
ompi/: Makefile.am
ompi/datatype/: ompi_datatype.h  ompi_datatype_args.c  ompi_datatype_create.c  ompi_datatype_create_struct.c  ompi_datatype_create_vector.c
ompi/hooks/: Makefile.am  ompi_hooks.h
ompi/mca/coll/base/: coll_tags.h
ompi/mca/coll/hcoll/: coll_hcoll.h  coll_hcoll_component.c  coll_hcoll_dtypes.h  coll_hcoll_module.c  coll_hcoll_ops.c
ompi/mca/coll/ucc/: Makefile.am  coll_ucc.h  coll_ucc_component.c  coll_ucc_debug.h  coll_ucc_dtypes.h  coll_ucc_module.c  coll_ucc_ops.c  configure.m4
ompi/mca/coll/uch/: Makefile.am  coll_uch.h  coll_uch_component.c  coll_uch_debug.h  coll_uch_dtypes.h  coll_uch_module.c  coll_uch_ops.c  configure.m4
ompi/mpi/c/: alloc_mem.c  free_mem.c
ompi/runtime/: ompi_mpi_finalize.c  ompi_mpi_init.c
opal/mca/common/ucx/: common_ucx.c
oshmem/mca/spml/ucx/: spml_ucx.c  spml_ucx.h
